(Fix Vul: Samba) Samba远程代码执行漏洞(CVE-2017-7494) 修复 start.sh 问题

--- a/s/samba/1/src/smb.conf
+++ b/s/samba/1/src/smb.conf
@@ -185,6 +185,7 @@
 # public shares, not just authenticated ones
    usershare allow guests = yes
 
+   # guest account = root
 #======================= Share Definitions =======================
 
 # Un-comment the following (and tweak the other settings below to suit)
