--- a/n/nginx/1/src/default.conf
+++ b/n/nginx/1/src/default.conf
@@ -13,7 +13,7 @@ server {
             proxy_pass http://127.0.0.1:8080/;
             proxy_set_header HOST $host;
             proxy_cache my_zone;
-            add_header X-Proxy-Cache: $upstream_cache_status;
+            add_header X-Proxy-Cache $upstream_cache_status;
             proxy_ignore_headers Set-Cookie;
     }
 
